	* Incremented the package version to 0.9.0.
2018-10-21 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'centos7/' setup to install Rivendell 3.x Beta.
2018-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Fixed regression in the 'centos7/' installation script when using
	'--server' mode.
2018-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'win32_setups' share from the Samba configuration in
	the 'centos7/' installation script.
2018-10-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'centos7/' installer to use the Operations Guide
	from the 'rivendell-opsguide' package.
	* Added custom tailored default configuration for Xfce4 to the
	'centos7/' installer.
2018-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha00.
2018-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Modified the RHEL7 installation instructions to have the user
	enable 'Automatically connect' for the network interface.
2018-10-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha01.
2018-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Modified the RHEL7 installer to initialize the automounter
	for all install types.
2018-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha02.
2018-11-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'install_rivendell.sh' script that failed
	to create the source directories for 'rd_xfer/', etc when invoked
	in '--server' and '--standalone' mode.
2018-11-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha03.
2018-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'rd' user to the 'wheel' group.
2018-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha04.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'taglib-devel' package to 'install_rivendell_devel.sh'.