@@ -225,3 +225,6 @@
 	* Incremented the package version to 0.9.0rd3alpha04.
 2018-11-26 Fred Gleason <fredg@paravelsystems.com>
 	* Added the 'taglib-devel' package to 'install_rivendell_devel.sh'.
+2018-11-26 Fred Gleason <fredg@paravelsystems.com>
+	* Added blacklist entry for the 'snd-asihpi' module on CentOS 7
+	installs.
